--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="image/infinity-solid.png" color="white">
+    <title>Sign Up</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-nav.css">
     <link rel="stylesheet" href="footer-section.css">
@@ -13,11 +14,11 @@
     <header>
         <a href="#" class="logo">INFINITY<i class="fa-solid fa-infinity"></i></a>
         <ul class="specs">
-            <li><a href="#">HOME</a></li>
+            <li><a href="https://harsh021102.github.io/productpage.github.io/">HOME</a></li>
             <!-- <li><a href="#">Contact</a></li> -->
         </ul>
         <ul class="main">
-            <li><a href="#">Home</a></li>
+            <li><a href="https://harsh021102.github.io/productpage.github.io/">Home</a></li>
             <li><a href="#">Phones</a></li>
             <li><a href="#">Tablets</a></li>
             <li><a href="#">Wearable</a></li>
@@ -53,7 +54,7 @@
                         <input type="submit" value="Log In">
                     </div>
                     <div class="input-box">
-                        <p>Already have an account? <a href="#">Log in</a> </p>
+                        <p>Already have an account? <a href="https://harsh021102.github.io/productlogin.github.io/">Log in</a> </p>
                     </div>
                 </form>    
             </div>
