--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <a href="#" class="logo">INFINITY<i class="fa-solid fa-infinity"></i></a>
         <ul class="specs">
             <li><a href="https://harsh021102.github.io/productpage.github.io/">HOME</a></li>
-            <!-- <li><a href="#">Contact</a></li> -->
         </ul>
         <ul class="main">
             <li><a href="https://harsh021102.github.io/productpage.github.io/">Home</a></li>
@@ -23,7 +22,6 @@
             <li><a href="#">Tablets</a></li>
             <li><a href="#">Wearable</a></li>
             <li><a href="#">Accessories</a></li>
-            <!-- <li><a href="#">Contact</a></li> -->
         </ul>
     </header>
     <section>
@@ -41,7 +39,7 @@
                     </div>
                     <div class="input-box">
                         <h3>Email</h2>
-                        <input type="email" placeholder="E-mail">
+                            <input type="email" placeholder="E-mail">
                     </div>
                     <div class="input-box">
                         <h3>Password</h2>
@@ -60,7 +58,7 @@
             </div>
         </div>
         <div class="image-section">
-            <img src="image/infinity.png" alt="">
+            <img src="image/infinity.png" alt="infinity">
         </div>
     </section>
     <div class="footer-section">
